fix provision modals z-index

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -24,10 +24,6 @@ body {
     .ui.nag {
         border-radius: 0;
     }
-
-    .f-loading.ui.dimmer {
-        z-index: 1001;
-    }
 }
 
 main {
